// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FlexTable / Expandable FlexTable Controlled Expandable Table With Custom Row 1`] = `
.c30 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c33 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c33 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c33 > *:not(:first-child) {
  padding-top: 0;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c25 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c26 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c28 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c32 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c24 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c24,
.c24[type='button'],
.c24[type='reset'],
.c24[type='submit'] {
  -webkit-appearance: button;
}

.c24::-moz-focus-inner,
.c24[type='button']::-moz-focus-inner,
.c24[type='reset']::-moz-focus-inner,
.c24[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c24:-moz-focusring,
.c24[type='button']:-moz-focusring,
.c24[type='reset']:-moz-focusring,
.c24[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c18:focus {
  outline: none;
}

.c31 {
  background: #FFFFFF;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c27 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c27 > *:first-child {
  padding-left: 0;
}

.c27 > *:last-child {
  padding-right: 0;
}

.c29 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c8 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-left: 4px;
}

@media (min-width:976px) {
  .c30 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c16 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c21 {
    display: none;
  }
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
    />
  </div>
  <div
    className="c4 c5 c6"
    role="row"
  >
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c12 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        />
      </div>
    </div>
  </div>
  <div
    className="c4 c13"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c17 c18"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c20"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c17 c18"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c22 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c4 c13"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c25"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c26 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c4 c27"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={true}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c25"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                transform="rotate(-180 12 12)"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={true}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c26 c28"
              direction="up"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c29"
    role="row"
  >
    <div
      className="c30 c31"
      role="cell"
    >
      <div
        className="c16"
      >
        <ul
          className="c32"
        />
      </div>
      <div
        className="c21"
      >
        <ul
          className="c32 c33"
        />
      </div>
    </div>
  </div>
  <div
    className="c4 c13"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c25"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c26 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c4 c13"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c25"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c26 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Expandable FlexTable Controlled Expanded Table 1`] = `
.c30 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c33 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c33 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c33 > *:not(:first-child) {
  padding-top: 0;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c25 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c26 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c28 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c32 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c24 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c24,
.c24[type='button'],
.c24[type='reset'],
.c24[type='submit'] {
  -webkit-appearance: button;
}

.c24::-moz-focus-inner,
.c24[type='button']::-moz-focus-inner,
.c24[type='reset']::-moz-focus-inner,
.c24[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c24:-moz-focusring,
.c24[type='button']:-moz-focusring,
.c24[type='reset']:-moz-focusring,
.c24[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c18:focus {
  outline: none;
}

.c31 {
  background: #FFFFFF;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c27 {
  background: #FFFFFF;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid #0046FF;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c27 > *:first-child {
  padding-left: 0;
}

.c27 > *:last-child {
  padding-right: 0;
}

.c29 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c8 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-left: 4px;
}

@media (min-width:976px) {
  .c30 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c16 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c21 {
    display: none;
  }
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
    />
  </div>
  <div
    className="c4 c5 c6"
    role="row"
  >
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Header 1
        </span>
      </div>
    </div>
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Header 2
        </span>
      </div>
    </div>
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Header 3
        </span>
      </div>
    </div>
    <div
      className="c12 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        />
      </div>
    </div>
  </div>
  <div
    className="c4 c13"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Disabled
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c17 c18"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c20"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c17 c18"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c22 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c4 c13"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c25"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c26 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c4 c27"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with initial state
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={true}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c25"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                transform="rotate(-180 12 12)"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={true}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c26 c28"
              direction="up"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c29"
    role="row"
  >
    <div
      className="c30 c31"
      role="cell"
    >
      <div
        className="c16"
      >
        <ul
          className="c32"
        />
      </div>
      <div
        className="c21"
      >
        <ul
          className="c32 c33"
        />
      </div>
    </div>
  </div>
  <div
    className="c4 c13"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable component items
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c25"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c26 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c4 c13"
    role="row"
  >
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c7 c14"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c15"
        >
          Expandable with children
        </span>
      </div>
    </div>
    <div
      className="c12 c14"
      role="cell"
    >
      <div
        className="c16"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c25"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="c21"
      >
        <button
          aria-expanded={false}
          className="NormalizedButton__Button-ey7f5x-0 c24 c18"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="c19"
          >
            <svg
              aria-hidden="true"
              className="c26 c23"
              direction="down"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 16 16"
            >
              <polygon
                points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Expandable FlexTable Expanded Table 1`] = `
.c30 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c33 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c33 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c33 > *:not(:first-child) {
  padding-top: 0;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c22 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #A0A09B;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c25 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c26 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 16px;
  height: 16px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c28 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c32 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c19 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #A0A09B;
  border: none;
  border-radius: 0;
  cursor: not-allowed;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c24 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c24,
.c24[type='button'],
.c24[type='reset'],
.c24[type='submit'] {
  -webkit-appearance: button;
}

.c24::-moz-focus-inner,
.c24[type='button']::-moz-focus-inner,
.c24[type='reset']::-moz-focus-inner,
.c24[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c24:-moz-focusring,
.c24[type='button']:-moz-focusring,
.c24[type='reset']:-moz-focusring,
.c24[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10 {
  width: inherit;
}

.c14 {
  overflow: hidden;
}

.c18:focus {
  outline: none;
}

.c31 {
  background: #FFFFFF;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c13 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c13:hover {
  background: #F5F5F5;
}

.c13 > *:first-child {
  padding-left: 0;
}

.c13 > *:last-child {
  padding-right: 0;
}

.c27 {
  background: #FFFFFF;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid #0046FF;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c27 > *:first-child {
  padding-left: 0;
}

.c27 > *:last-child {
  padding-right: 0;
}

.c29 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c8 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-left: 4px;
}

@media (min-width:976px) {
  .c30 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c16 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c21 {
    display: none;
  }
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div>
  <div
    className="c0"
    role="table"
  >
    <div
      className="c1"
    >
      <span
        className="c2 c3"
      />
    </div>
    <div
      className="c4 c5 c6"
      role="row"
    >
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c7 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c12 c8"
        role="columnheader"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c11"
          />
        </div>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Disabled
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c20"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c17 c18"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c22 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c18"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c25"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c18"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c26 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c4 c27"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable with initial state
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c24 c18"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c25"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                  transform="rotate(-180 12 12)"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={true}
            className="NormalizedButton__Button-ey7f5x-0 c24 c18"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c26 c28"
                direction="up"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c29"
      role="row"
    >
      <div
        className="c30 c31"
        role="cell"
      >
        <div
          className="c16"
        >
          <ul
            className="c32"
          />
        </div>
        <div
          className="c21"
        >
          <ul
            className="c32 c33"
          />
        </div>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable component items
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c18"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c25"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c18"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c26 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="c4 c13"
      role="row"
    >
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c7 c14"
        role="cell"
      >
        <div
          className="c9 c10"
        >
          <span
            className="c15"
          >
            Expandable with children
          </span>
        </div>
      </div>
      <div
        className="c12 c14"
        role="cell"
      >
        <div
          className="c16"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c18"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c25"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <polygon
                  points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="c21"
        >
          <button
            aria-expanded={false}
            className="NormalizedButton__Button-ey7f5x-0 c24 c18"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="c19"
            >
              <svg
                aria-hidden="true"
                className="c26 c23"
                direction="down"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <polygon
                  points="14.620 3.580, 16.000 5.020, 8.000 12.730, 0.000 5.030, 1.400 3.580, 8.000 9.96"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Expandable FlexTable Expanded Table Different Font Size On Mobile 1`] = `
.c5 {
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 8px;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -20px;
  margin-right: -20px;
}

.c10 > * {
  padding-left: 20px;
  padding-right: 20px;
}

.c10 > *:not(:first-child) {
  padding-top: 0;
}

.c8 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c6 {
  background: #FFFFFF;
}

.c4 {
  border-left: 2px solid #0046FF;
  border-bottom: 1px solid #EBEBE8;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-left: 4px;
}

@media (min-width:976px) {
  .c5 {
    padding-left: 20px;
    padding-top: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
  }
}

@media not all and (max-width:975px) {
  .c7 {
    display: none;
  }
}

@media not all and (min-width:976px) {
  .c9 {
    display: none;
  }
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
    />
  </div>
  <div
    className="c4"
    role="row"
  >
    <div
      className="c5 c6"
      role="cell"
    >
      <div
        className="c7"
      >
        <ul
          className="c8"
        />
      </div>
      <div
        className="c9"
      >
        <ul
          className="c8 c10"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Expandable FlexTable Only Expandable On Mobile Table 1`] = `
.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-left: 4px;
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
    />
  </div>
</div>
`;
